# Predictpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: codeql.yml  publish-pypi.yml  release-please.yml
docs/: advanced-usage.md  api-reference.md  configuration.md  examples.md  getting-started.md  index.md  semantic-features.md  troubleshooting.md
examples/: caching_example.py  quick_start_semantic.py  semantic_demo.py  simple_usage.py  test_wordlist.py
predictpy/: __init__.py  api.py  engine.py  personal.py  predictor.py  semantic.py  utils.py  wordlist.py
predictpy/data/: __init__.py
tests/: __init__.py  test_engine.py  test_personal.py  test_predictor.py  test_semantic.py
